ghost/admin/assets/sass/modules/global.scss
/* ... */
.notification-success {
    @extend %notification;
    @include icon($i-success);
    background: $green;

    &.notification-passive {
        @include animation(fade-out 1s linear);
        @include animation-delay(3s);
        @include animation-iteration-count(1);
        @include animation-fill-mode(forwards);
    }
}

.notification-error {
    @extend %notification;
    @include icon($i-error);
    background: $red;
}


.notification-warn {
    @extend %notification;
    @include icon($i-info);
    background: $orange;
}

.notification-info {
    @extend %notification;
    @include icon($i-info);
    background: $blue;
}

/* ==========================================================================
   Modals
   ========================================================================== */
#modal-container {
    &.active {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        z-index: 999;
        @include transition(all 0.15s linear 0s);
        @include transform(translateZ(0));

        &.dark {
            background: rgba(0,0,0,0.4);
        }

        .modal-background {
            position: absolute;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
            z-index: 999;
        }

    }
}

body.blur > *:not(#modal-container) {
    @include transition(all 0.15s linear 0s);
    -webkit-filter: blur(2px);
       -moz-filter: blur(2px);
        -ms-filter: blur(2px);
         -o-filter: blur(2px);
    filter: blur(2px);
    @include transform(translateZ(0));

}

%modal, .modal {
    @include box-sizing(border-box);
    max-height: 90%;
    width: 450px;
    padding: 0px;
    background: #FFFFFF;
    border: 6px solid rgba(0,0,0,0.5);
    border-radius: $rounded;
    overflow:auto;
    z-index: 1001;

    &.fade {
        opacity: 0;
        @include transition(opacity 0.2s linear 0s);

        &.in {
            opacity: 1;
        }
    }
}

.modal-info {
    @extend %modal;
}

.modal-action {
    @extend %modal;
}

.modal-header {
    position: relative;
    padding: 20px;
    border-bottom: 1px solid $lightgrey;

    h1 {
        display: inline-block;
        margin: 0;
        font-size: 1.5em;
        font-weight: bold;
    }

    .close {
        @include box-sizing(border-box);
        position: absolute;
        top: 10px;
        right: 20px;
        width: 16px;
        min-height: 16px;
        padding: 0;
        margin: 0;
        border: none;
        opacity: 0.4;

        @include icon($i-close, 1em, $midgrey);
        @include transition(opacity 0.3s linear);

        &:hover{
           opacity: 1;
        }
    }
}

.modal-content {
    padding: 0 20px;
}

.modal-footer {
    padding: 20px;
    padding-top: 0;
}

.modal-style-wide {
    @extend %modal;
    width: 550px;
}

/* ==========================================================================
   Main Elements
   ========================================================================== */

main {
    position: absolute;
    bottom: 0;
    top: 55px;
    left: 15px;
    right: 15px;
    padding: 0;

    @include breakpoint($mobile) {
        left:0;
        right:0;
    }

}


/* ==========================================================================
   Floating Headers
   ========================================================================== */

// Semi-opaque fixed-position headers - used on content/editor
.floatingheader {
    @include box-sizing(border-box);
    position: absolute;
    top:0;
    left:0;
    right:0;
    z-index: 400;
    height: 40px;
    padding: 12px 15px;
    text-transform: uppercase;
    font-size: 0.85em;
    color: $brown;
    //Transparent gradient to make bg fade out as it goes out the top.
    background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,0.90) 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(25%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0.90)));
    background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 25%,rgba(255,255,255,0.90) 100%);
    background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 25%,rgba(255,255,255,0.90) 100%);
    background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 25%,rgba(255,255,255,0.90) 100%);
    background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 25%,rgba(255,255,255,0.90) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2ffffff',GradientType=0 );

    button, .button {
        display:inline-block;
        font-size: 10px;
        min-height: 20px;
        height: 20px;
        padding: 3px 4px;
        vertical-align: top;
    }

    a {
        color: $brown;
        &:hover { color: $darkgrey; }
    }

}//.floatingheader

// Special case, when scrolling, add shadows to content headers.
.scrolling {

    .floatingheader {
        box-shadow:
            rgba(0,0,0,0.02) 0 1px 2px,
            rgba(255, 255, 255, 0.5) 0 -1px 0 inset;

        &::before {
            content: "";
            height:40px;
            width: 80%;
            position:absolute;
            bottom:0;
            left:50%;
            margin-left: -40%;
            box-shadow: rgba(0,0,0,0.02) 0 2px 2px;
        }
        &::after {
            content: "";
            height:40px;
            width: 30%;
            position:absolute;
            bottom:0;
            left:50%;
            margin-left: -15%;
            box-shadow: rgba(0,0,0,0.02) 0 3px 3px;
        }
    }

}
/* ... */

