Bug Fix: Action modals now have centered content and correct spacing
This also adds functionality to Modals, so they can have multiple
styles, e.g 'wide' and 'centered'.

--- a/ghost/admin/assets/sass/modules/global.scss
+++ b/ghost/admin/assets/sass/modules/global.scss
@@ -979,6 +979,10 @@ body.blur > *:not(#modal-container) {
 
 .modal-action {
     @extend %modal;
+
+    .modal-footer {
+        margin-top: 20px;
+    }
 }
 
 .modal-header {
@@ -1024,10 +1028,12 @@ body.blur > *:not(#modal-container) {
 }
 
 .modal-style-wide {
-    @extend %modal;
     width: 550px;
 }
 
+.modal-style-centered {
+    text-align: center;
+}
 /* ==========================================================================
    Main Elements
    ========================================================================== */
